--- a/project.config
+++ b/project.config
@@ -4,6 +4,7 @@
 [project]
 	description = NNBDemo2
 [access "refs/*"]
+	owner = group user/cookie0919
 	owner = group user/leafrain8619
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/leafrain8619
