Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,11 +4,11 @@
 [project]
 	description = NNBDemo2
 [access "refs/*"]
-	owner = group user/cookie0919
 	owner = group user/leafrain8619
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/leafrain8619
 	label-Verified = -1..+1 group user/leafrain8619
+	push = group user/cookie0919
 	push = group user/leafrain8619
 	read = group user/leafrain8619
 	rebase = group user/leafrain8619
