Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,7 +8,9 @@
 [access "refs/for/refs/*"]
 	label-Code-Review = -2..+2 group user/leafrain8619
 	label-Verified = -1..+1 group user/leafrain8619
+	push = group user/MengZhihao95
 	push = group user/cookie0919
+	push = group user/ijwj
 	push = group user/leafrain8619
 	read = group user/leafrain8619
 	rebase = group user/leafrain8619
